--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="I am a Full Stack Web Developer. I usually make Websites / Web Apllications. Flexible with HTML5, CSS3, JS, PHP, MYSQLI, REACTJS, NODEJS, WORDPRESS, MONGODB, BOOTSTRAP, RUBY ON RAILS."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   
