--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,13 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   
     <title>Dhawan Solanki</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"> -->
   </head>
   <body>
    
     <div id="root"></div>
 
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
 
   </body>
 </html>
