--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
   
     <title>Dhawan Solanki</title>
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"> -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3888245064061468"
+     crossorigin="anonymous"></script>
   </head>
   <body>
    
